# Mapeo3D_LiDAR2D

./: Migración.docx  Migración.odt  README.md  concatenated_cloud.pcd
Codes_Arduino/BaseLidarAngulos/: baseLidar.ino
Map3D/: readM.txt
Map3D/src/Project_MAP3D-main/: package.xml
Map3D/src/Project_MAP3D-main/config/: position_controller.yaml
Map3D/src/Project_MAP3D-main/launch/: display.launch.py  gazebo.launch.py  joint_group_position_controller.launch.py
Map3D/src/Project_MAP3D-main/scripts/: move_joint.py
Map3D/src/Project_MAP3D-main/urdf/: Ensamblaje12.csv  myAGV.urdf
Map3D/src/RAS/: concatenated_cloud.pcd
Map3D/src/RAS/install/: local_setup.sh  setup.sh
Map3D/src/RAS/rosbag2_2024_04_26-01_58_00/: metadata.yaml  rosbag2_2024_04_26-01_58_00_0.db3
Map3D/src/my_subscriber_pkg/my_subscriber_pkg/: gui_node.py  my2_teleop_node.py  my_teleop_node.py  teleop_node.py  test.py
Map3D/src/navigation_pkg/navigation_pkg/: nav1.py
OficialCodes/: readme1.txt
OficialCodes/AGV_UI/: map.pgm
OficialCodes/AGV_UI/operations_UI/: camera_window.py
ROS1Master/medium_ws/: read1.txt
ROS1Master/medium_ws/devel/: .catkin  .rosinstall  setup.sh
ROS1Master/medium_ws/src/my_subscriber_pkg/: CMakeLists.txt
ROS1Robot/MAP3D/: readR.txt  test.py
ROS1Robot/MAP3D/devel/: .catkin  local_setup.sh
ROS1Robot/MAP3D/devel/lib/pkgconfig/: urg_node.pc  (+1 more)
ROS1Robot/MAP3D/src/my_robot_pkg/: CMakeLists.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_subscriber/share/my_subscriber/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_subscriber_pkg/lib/my_subscriber_pkg/: gui_node  my2_teleop_node  my_teleop_node  navigation_node  subscriber_node  teleop_node
install/my_subscriber_pkg/share/my_subscriber_pkg/: package.dsv  package.ps1  package.sh  package.xml
install/navigation_pkg/lib/navigation_pkg/: nav1  nav2_node  navigation_node  obstacle_node
install/navigation_pkg/share/navigation_pkg/: package.sh  package.xml
log/: latest_build  latest_list
oficialCodes/AGV_UI/: operations.py
src/Project_MAP3D-main/: package.xml  setup.py
src/Project_MAP3D-main/launch/: gazebo.launch.py  robot_state_publisher.launch.py
src/Project_MAP3D-main/meshes/: base_lidar_Link.STL  base_link.STL
src/Project_MAP3D-main/urdf/: myAGV.urdf
src/RAS/log/: latest_build
src/RAS/src/vonns2-main/vonns2_reconstruction/: CMakeLists.txt
src/my_subscriber/: CMakeLists.txt  package.xml
src/my_subscriber_pkg/: package.xml  setup.py
src/my_subscriber_pkg/my_subscriber_pkg/: subscriber_node.py
src/navigation_pkg/: package.xml  setup.py
src/navigation_pkg/navigation_pkg/: nav2_node.py  navigation_node.py  obstacle_node.py
(+157 files in other folders)
