<?xml version="1.0"?>
<package format="3">
  <name>robot_description</name>
  <version>0.0.0</version>
  <description>Package for controlling the robot's base lidar joint.</description>
  <maintainer email="brayanpadilla198@gmail.com">brayanpadilla</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>example_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
